# mcp_server

./: .gitignore  GMAIL_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  QUICK_START_GMAIL.md  correct_coordinate_finder.py  find_coordinates.py  gmail_mcp_server.py  install_gmail_deps.sh  mcp_server.py  pointer.py  pyproject.toml  quick_coordinate_finder.py  talk2mcp.py  talk2mcp_with_gmail.py  test_paint_click.py
